[package]
name = "misp-types"
version = "0.1.0"
authors = ["Alain Krier <krial057@gmail.com>"]
license = "MIT"
description = "An implementation of the types used by MISP"
homepage = "https://github.com/krial057/thrust_intelligence"
repository = "https://github.com/krial057/thrust_intelligence"
readme = "README.md"
edition = "2018"

[dependencies]
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = "0.4.11"
serde = {version = "1.0", optional = true, features = ["derive"]}
serde_json = {version = "1.0", optional = true}

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["json-using-serde"]
json-using-serde = ["serde", "serde_json"]